--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hapi/hapi": "^20.2.1",
     "@hapi/joi": "^17.1.1",
     "hapi-pino": "^9.1.1",
+    "hapi-swagger": "^14.2.4",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
     "loglevel": "^1.8.0",
