--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
     "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^6.1.0",
+    "axios": "^0.25.0",
     "hapi-pino": "^9.1.1",
     "hapi-swagger": "^14.2.4",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
     "loglevel": "^1.8.0",
-    "pino-pretty": "^7.5.1"
+    "pino-pretty": "^7.5.1",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "jest": "^27.4.7"
