--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
   "homepage": "https://github.com/iamgoangle/73c18c59a39b18382081ec00bb456d43#readme",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.5",
     "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^6.1.0",
     "axios": "^0.25.0",
     "hapi-pino": "^9.1.1",
     "hapi-swagger": "^14.2.4",
+    "inert": "^5.1.3",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
     "loglevel": "^1.8.0",
     "pino-pretty": "^7.5.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "jest": "^27.4.7"
